# slang

./: Cargo.toml  README.md  SYNTAX.md
assets/: ide.html
examples/: algebra.sl  demo.sl  math_demo.sl  variables.sl  waves_demo.sl
src/: main.rs
src/cli/: mod.rs
src/ide/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/renderer/: animation.rs  backgrounds.rs  eval.rs  export.rs  mod.rs  plotting.rs  scene.rs  shapes.rs  text.rs
